Fix navbar CSS on mobile.

--- a/ClientApp/src/styles/_blog.scss
+++ b/ClientApp/src/styles/_blog.scss
@@ -48,10 +48,6 @@ article header span {
 }
 
 @media screen and (max-width: $media-width-small) {
-  article {
-    padding-top: 30px;
-  }
-
   article header {
     font-size: 1.2em;
   }
