--- a/ClientApp/src/styles/_main.scss
+++ b/ClientApp/src/styles/_main.scss
@@ -162,3 +162,9 @@ button[disabled] {
     padding-bottom: 10px;
   }
 }
+
+@media screen and (max-width: $media-width-xsmall) {
+  header.main {
+    padding-bottom: 60px;
+  }
+}
