--- a/ClientApp/src/styles/_variables.scss
+++ b/ClientApp/src/styles/_variables.scss
@@ -18,4 +18,4 @@ $media-width-xlarge: 1580px;
 $media-width-large: 1260px;
 $media-width-medium: 875px;
 $media-width-small: 725px;
-$media-width-xsmall: 440px;
+$media-width-xsmall: 615px;
